# med-record

./: .gitignore  Blog.MD  Dockerfile  README.md  handoff.txt  inference.py  openenv.yaml  progress.txt  pyproject.toml  requirements.txt  run_task.py  validate-submission.sh
data/: diseases.json  drugs.json  lab_ranges.json
data/cases/easy/: case_001.json  case_002.json  case_003.json  case_004.json  case_005.json
data/cases/hard/: case_001.json  case_002.json  (+1 more)
env/: environment.py  reward.py  rubrics.py  server.py
env/graders/: __init__.py  __main__.py  base.py  easy_001.py  easy_002.py  easy_003.py  hard_001.py  hard_002.py  hard_003.py  medium_001.py  medium_002.py  medium_003.py
experiments/: build_comparison.py  build_plots.py  comparison.json  comparison.md  eval_from_hub.py  random_agent.py  run_llm_baseline.py  run_llm_baseline_3trials.py  run_naive_llm_baseline.py  run_small_llm_baseline.py  trained.json  upload_plots_to_hub.py
experiments/baselines/: random.json  untrained_llm.json  untrained_naive_llm.json
server/: app.py
tasks/easy_001/: task.json
tasks/easy_002/: task.json
tasks/easy_003/: task.json
tasks/hard_001/: task.json
tasks/hard_002/: task.json
tasks/hard_003/: task.json
tasks/medium_001/: task.json
tasks/medium_002/: task.json
tasks/medium_003/: task.json
tests/: test_antihack.py  test_curriculum.py  test_env.py  test_no_leak.py
training/: __init__.py  build_eval_notebook.py  build_notebook.py  build_notebook_kaggle.py  curriculum.py  eval_kaggle.ipynb  train_grpo.ipynb  train_grpo_kaggle.ipynb  trainer_state.json
(+5 files in other folders)
