[project]
name = "medrecordaudit"
version = "0.1.0"
description = "RL environment for medical record auditing — find missed diagnoses, drug interactions, and contradictions in patient histories"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
